--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Drishti Infrastructure</title>
   <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" />
-  <meta name="description" content="website description" />
+  <meta name="description" content="Our Motto is Your Satisfaction." />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style/style.css" />
