--- a/our_work.html
+++ b/our_work.html
@@ -113,6 +113,10 @@
           <li>Bhoomi Associate</li>
           <li>Veda Developers</li>
           <li>Ishwar Hygiene</li>
+          <li>Swastik ABTech [Labham Group]</li>
+          <li>AB Industrial</li>
+          <li>Rays Power Infra.</li>
+          <li>Indore Municipal Corporation</li>
         </ul>
       </div>
     </div>
